* IMPROVEMENT: Added --with-openssl flag to configure.
* IMPROVEMENT: Debian packaging implemented.
* IMPROVEMENT: Redhat packaging files moved to 'packaging/redhat'.
* IMPROVEMENT: Corrected alignment when using '-y' flag.
* BUGFIX: Fixed rebuild.sh default behaviour.
* IMPROVEMENT: Optimized gttlvgrep for large TLV files.
* IMPROVEMENT: Optimized gttlvdump for large TLV files.
* IMPROVEMENT: Added "b64" as an alias to "base64"
* BUGFIX: Fixed input data intake in gttlvdump and gttlvgrep, where data pointer is moved instead of copying.
* BUGFIX: Fixed gttlvdump input data empty buffer handling.

Versioning 1.2

2017-05-12 1.2.414

* FEATURE: New parameter -E to support base-16 and base-64 encoded input data.
* FEATURE: Automatic file magic bytes detection for known formats.
* IMPROVEMENT: Support for running memory tests.
* IMPROVEMENT: Error handling improved when invalid hex string is parsed by gttlvundump.
* IMPROVEMENT: Simplified the loading of custom description files.
* IMPROVEMENT: Code cleanup.
* IMPROVEMENT: Removed size_t defined check.
* BUGFIX: Corrected gttlvwrap heap corruption under Windows when RTL is MDd or MTd.
* BUGFIX: Setting gttlvgrep stdin into binary mode under windows.
* BUGFIX: Putting temp buffer arrays into heap.
* BUGFIX: The search pattern is parsed before gttlvgrep starts parsing input.
* BUGFIX: Setting gttlvgrep (in case of '-r') and gttlvwrap stdout mode to binary.
* BUGFIX: Grep is grepping invalid content.
* BUGFIX: Setting gttlvdump stdin mode to binary.
* BUGFIX: Fixed description for metadata padding TLV type in right link (0801.08.04.1E).

Version 1.1

2016-11-16 1.1.331

* IMPROVEMENT: Support for KSIAP and KSIEP PDU version 2.
* IMPROVEMENT: Added -D for specifying description file directory.
* IMPROVEMENT: Added -o for overriding default description files.
* IMPROVEMENT: Added -i for ignoring default description files.
* BUGFIX: Grep is grepping invalid content.
* BUGFIX: Setting gttlvdump stdin mode to binary.